# game-tbd

./: Cargo.toml  README.md
assets/: cube.blend  cube.blend1  cube.glb  ground.blend  ground.blend1  ground.glb  untitled.blend  untitled.mtl
shaders/: shader.wgsl
src/: camera.rs  game.rs  graphics.rs  input.rs  light.rs  main.rs  math.rs  maths.rs  phsyics.rs  physics.rs  shader.wgsl
src/graphics/: camera.rs  gpu.rs  light.rs  mod.rs  models.rs
src/graphics/assets/: gltf.rs  mod.rs
