[package]
name = "unknown-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
gltf = { version = "1.4.1", default-features = false, features = ["import", "utils"] }
image = { version = "0.25.6", default-features = false, features = ["jpeg"] }
log = { version = "0.4.27", default-features = false }
pollster = { version = "0.4.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "wayland"] }
wgpu = { version = "25.0.0", default-features = false, features = ["wgsl", "vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
winit = { version = "0.30.9", default-features = false, features = ["rwh_06"] }
wgpu = { version = "25.0.0", default-features = false, features = ["wgsl", "dx12", "vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
winit = { version = "0.30.9", default-features = false, features = ["rwh_06"] }
wgpu = { version = "25.0.0", default-features = false, features = ["wgsl", "metal"] }
